--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -12,8 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/welcome"
-        android:fontFamily=""
-        android:layout_marginTop="40dp"
+        android:fontFamily="@font/manrope_extrabold"
+        android:layout_marginTop="50dp"
         android:textColor="@color/white"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,6 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/appName"
+        android:fontFamily="@font/manrope_medium"
         android:textSize="30sp"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/textView"
@@ -44,8 +45,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="90dp"
         android:text="@string/app_name"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/gifImageView" />
