--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="blue_gray">#55748F</color>
     <color name="cinzinha_claro">#C6C6C6</color>
     <color name="light_blue">#639FD5</color>
+    <color name="red">#FB344F</color>
 </resources>
