--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -16,7 +16,7 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="40dp"
             android:fontFamily="@font/manrope_semibold"
             android:text="@string/ol_bem_vindo_de_volta"
             android:textColor="@color/blue_gray"
@@ -100,24 +100,23 @@
             android:id="@+id/text_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="60dp"
+            android:fontFamily="@font/manrope_semibold"
             android:text="@string/login_text"
             android:textColor="@color/cinzinha"
             android:textSize="14sp"
-            android:fontFamily="@font/manrope_semibold"
-
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            android:gravity="center"
+            app:layout_constraintStart_toStartOf="@+id/textView"
+            app:layout_constraintTop_toBottomOf="@+id/textView"
+            app:layout_constraintEnd_toEndOf="@+id/textView" />
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:fontFamily="@font/manrope_semibold"
             android:text="@string/verificar_armarios_por_perto"
             android:textColor="@color/cinzinha"
-            android:fontFamily="@font/manrope_semibold"
+            android:layout_marginTop="40dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />
@@ -126,11 +125,9 @@
             android:id="@+id/btnMaps"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
             android:contentDescription="@string/verificar_armarios_por_perto"
-            android:src="@drawable/ic_maps_background"
-            app:layout_constraintBottom_toTopOf="@+id/btnRegister"
+            android:src="@drawable/googlemaps"
+            android:layout_marginTop="15dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView5" />
