minor screen update

--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -4,16 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WelcomeFragment"
-    android:background="@drawable/background_bluegrayfade">
+    android:background="@drawable/background_bluegrayfade"
+    tools:context=".WelcomeFragment">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/welcome"
-        android:fontFamily="@font/manrope_extrabold"
         android:layout_marginTop="50dp"
+        android:fontFamily="@font/manrope_extrabold"
+        android:text="@string/welcome"
         android:textColor="@color/white"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,10 +25,10 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/appName"
         android:fontFamily="@font/manrope_medium"
-        android:textSize="30sp"
+        android:text="@string/appName"
         android:textColor="@color/white"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -37,10 +37,12 @@
         android:id="@+id/gifImageView"
         android:layout_width="match_parent"
         android:layout_height="400dp"
+        android:layout_marginTop="20dp"
         android:src="@drawable/lock"
-        tools:layout_editor_absoluteX="87dp"
-        tools:layout_editor_absoluteY="154dp"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:layout_width="wrap_content"
