--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -136,14 +136,14 @@
             android:id="@+id/btnRegister"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/manrope_semibold"
             android:text="@string/n_o_tem_cadastro_clique_aqui"
             android:textColor="@color/cinzinha"
-            android:fontFamily="@font/manrope_semibold"
             android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteY="684dp" />
+            app:layout_constraintTop_toBottomOf="@+id/btnMaps" />
 
 
 
