--- a/app/src/main/res/layout/dialog_location.xml
+++ b/app/src/main/res/layout/dialog_location.xml
@@ -81,12 +81,14 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
     <TextView
+        android:id="@+id/txt30"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:gravity="center"
         android:text="preço de 30 min"
         android:textSize="17sp" />
         <TextView
+            android:id="@+id/txt1"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:gravity="center"
@@ -94,18 +96,21 @@
             android:textSize="17dp"
 />
         <TextView
+            android:id="@+id/txt2"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:gravity="center"
             android:text="preço de 2 hora"
             android:textSize="17dp" />
         <TextView
+            android:id="@+id/txt4"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:gravity="center"
             android:text="preço de 4 hora"
             android:textSize="17dp" />
         <TextView
+            android:id="@+id/txt18"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:gravity="center"
