--- a/app/src/main/res/layout/dialog_qrcode.xml
+++ b/app/src/main/res/layout/dialog_qrcode.xml
@@ -1,18 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="20dp"
+    app:cardCornerRadius="20dp"
+    app:cardBackgroundColor="@color/white"
     android:layout_gravity="center">
 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:gravity="center">
-
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Locação Pendente"
+    android:gravity="center"
+    android:textSize="40sp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Apresente este QR code ao gerente: @MANAGER"
+        android:gravity="center"/>
     <ImageView
         android:id="@+id/qrCodeImg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:contentDescription="QrCode"
         android:src="@drawable/googlemaps" />
 
