--- a/app/src/main/res/layout/dialog_signout.xml
+++ b/app/src/main/res/layout/dialog_signout.xml
@@ -5,13 +5,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="20dp"
     app:cardBackgroundColor="@color/white"
-    android:layout_marginHorizontal="20dp">
+    android:layout_marginHorizontal="10dp">
 
     <LinearLayout
         android:gravity="center"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="20dp">
         <TextView
             android:textStyle="bold"
             android:textSize="40sp"
@@ -19,6 +20,12 @@
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:textSize="15sp"
+            android:text="Tem certeza que deseja sair da sua conta atual?"/>
         <LinearLayout
             android:gravity="center"
             android:layout_marginTop="20dp"
@@ -37,6 +44,7 @@
                 android:textSize="14sp"
                 android:textAllCaps="true"
                 android:text="@string/cancelar"
+                android:layout_marginStart="30dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
