--- a/app/src/main/res/layout/dialog_card.xml
+++ b/app/src/main/res/layout/dialog_card.xml
@@ -7,39 +7,52 @@
     app:cardBackgroundColor="@color/white"
     android:layout_marginHorizontal="20dp">
 
+    <TextView
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:textStyle="bold"
+        android:textSize="25sp"
+        android:layout_marginTop="10dp"
+        android:text="Cartão de Crédito"
+        android:textColor="@color/blue_gray"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
     <LinearLayout
+        android:padding="30dp"
         android:gravity="center"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <TextView
-            android:textStyle="bold"
-            android:textSize="40sp"
-            android:text="Cartão de Crédito"
-            android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:orientation="horizontal"
+            android:gravity="center"
             android:layout_margin="20dp">
             <TextView
                 android:id="@+id/tvCardNumber"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-            <Button
-                android:id="@+id/btnDeleteCard"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Apagar"
-                android:layout_gravity="end"/>
+                android:textStyle="bold"
+                android:textSize="16dp"
+                />
+
+            <Button
+                android:id="@+id/btnDeleteCard"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                app:icon="@drawable/baseline_delete_40"
+                app:iconTint="@color/black" />
         </LinearLayout>
         <LinearLayout
             android:gravity="center"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <Button
                 android:id="@+id/btnAddCard"
@@ -47,14 +60,18 @@
                 android:textAllCaps="true"
                 android:text="Adicionar"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textColor="@color/blue_gray"
+                style="@style/Widget.Material3.Button.OutlinedButton"/>
             <Button
                 android:id="@+id/btnCancel"
                 android:textSize="14sp"
                 android:textAllCaps="true"
                 android:text="@string/cancelar"
+                android:textColor="@color/blue_gray"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                style="@style/Widget.AppCompat.Button.Borderless"/>
         </LinearLayout>
 
 
