--- a/app/src/main/res/layout/dialog_payment.xml
+++ b/app/src/main/res/layout/dialog_payment.xml
@@ -8,14 +8,17 @@
     android:layout_marginHorizontal="20dp">
 
     <LinearLayout
+        android:padding="30dp"
         android:gravity="center"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
             android:textStyle="bold"
-            android:textSize="40sp"
-            android:text="Pagamento"
+            android:textSize="25sp"
+            android:text="Cadastar cartão de crédito"
+            android:textColor="@color/blue_gray"
+            android:layout_marginTop="10dp"
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -25,46 +28,97 @@
             android:orientation="vertical"
             android:layout_margin="20dp">
             <EditText
+                android:background="@drawable/input_shape"
                 android:id="@+id/etCardName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Nome"/>
+                android:hint="Nome do titular"
+                android:textSize="13sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:inputType="text"
+                />
             <EditText
+                android:layout_marginTop="14dp"
+                android:background="@drawable/input_shape"
                 android:id="@+id/etCardNumber"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Número do cartão" />
+                android:hint="Número do cartão"
+                android:textSize="13sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:maxLength="16"
+                android:inputType="number"/>
             <EditText
+                android:layout_marginTop="14dp"
+                android:background="@drawable/input_shape"
+                android:textSize="13sp"
                 android:id="@+id/etCardValidation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Validade" />
+                android:hint="Validade"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:maxLength="5"
+                android:inputType="text"/>
             <EditText
+                android:layout_marginTop="14dp"
+                android:background="@drawable/input_shape"
+                android:textSize="13sp"
                 android:id="@+id/etCardCCV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="CCV" />
+                android:hint="CCV"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:maxLength="3"
+                android:inputType="number"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/shape"
+            android:orientation="vertical">
+
+            <TextView
+                android:padding="10dp"
+                android:layout_width="200dp"
+                android:layout_height="95dp"
+                android:layout_gravity="center"
+                android:fontFamily="@font/manrope_medium"
+                android:gravity="center"
+                android:text="Atenção, ao cadastrar o seu cartão de crédito, todas as vezes que realizar uma locação, será cobrada a caução de uma diária e, estornada proporcionalmente de acordo com o período utilizado."
+                android:textColor="@color/black"
+                android:textSize="9sp" />
         </LinearLayout>
         <LinearLayout
             android:gravity="center"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <Button
                 android:id="@+id/btnSave"
                 android:textSize="14sp"
                 android:textAllCaps="true"
-                android:text="Salvar"
+                android:text="Cadastrar"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textColor="@color/blue_gray"
+                style="@style/Widget.Material3.Button.OutlinedButton"/>
             <Button
                 android:id="@+id/btnCancel"
                 android:textSize="14sp"
                 android:textAllCaps="true"
                 android:text="@string/cancelar"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textColor="@color/blue_gray"
+                style="@style/Widget.AppCompat.Button.Borderless"/>
         </LinearLayout>
 
 
