update app structure
made app struct better

--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_bluegrayfade"
-    tools:context=".WelcomeFragment">
+    tools:context=".main.WelcomeFragment">
 
     <TextView
         android:id="@+id/textView"
