--- a/app/src/main/res/navigation/nav_client.xml
+++ b/app/src/main/res/navigation/nav_client.xml
@@ -16,7 +16,7 @@
     </fragment>
     <activity
         android:id="@+id/mainActivity"
-        android:name="com.puc.pi3_es_2024_t24.MainActivity"
+        android:name="com.puc.pi3_es_2024_t24.main.MainActivity"
         android:label="activity_main"
         tools:layout="@layout/activity_main" />
 </navigation>
