--- a/app/src/main/res/navigation/nav_client.xml
+++ b/app/src/main/res/navigation/nav_client.xml
@@ -12,7 +12,9 @@
         tools:layout="@layout/fragment_home" >
         <action
             android:id="@+id/action_homeFragment_to_mainActivity"
-            app:destination="@id/mainActivity" />
+            app:destination="@id/mainActivity"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true"/>
     </fragment>
     <activity
         android:id="@+id/mainActivity"
