--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,7 +17,9 @@
             app:exitAnim="@anim/nav_default_pop_exit_anim" />
         <action
             android:id="@+id/action_welcomeFragment_to_nav_client"
-            app:destination="@id/nav_client" />
+            app:destination="@id/nav_client"
+            app:popUpTo="@id/welcomeFragment"
+            app:popUpToInclusive="true"/>
     </fragment>
     <fragment
         android:id="@+id/signUpFragment"
@@ -48,7 +50,9 @@
             app:destination="@id/forgotPasswordFragment" />
         <action
             android:id="@+id/action_signInFragment_to_nav_client"
-            app:destination="@id/nav_client" />
+            app:destination="@id/nav_client"
+            app:popUpTo="@id/welcomeFragment"
+            app:popUpToInclusive="true"/>
     </fragment>
     <fragment
         android:id="@+id/mapsFragment"
