update camera permissions
added request camera permissions

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -53,6 +53,9 @@
             app:destination="@id/nav_client"
             app:popUpTo="@id/welcomeFragment"
             app:popUpToInclusive="true"/>
+        <action
+            android:id="@+id/action_signInFragment_to_cameraFragment"
+            app:destination="@id/cameraFragment" />
     </fragment>
     <fragment
         android:id="@+id/mapsFragment"
@@ -68,5 +71,10 @@
             app:destination="@id/signInFragment" />
     </fragment>
     <include app:graph="@navigation/nav_client" />
+    <fragment
+        android:id="@+id/cameraFragment"
+        android:name="com.puc.pi3_es_2024_t24.CameraFragment"
+        android:label="fragment_camera"
+        tools:layout="@layout/fragment_camera" />
 
 </navigation>
