Primeiro commit do NFC - iniciando implementação

--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -153,9 +153,23 @@
             android:text="Test Camera"
             app:layout_constraintBottom_toTopOf="@+id/btnRegister"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_bias="0.226"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnMaps" />
+            app:layout_constraintTop_toBottomOf="@+id/btnMaps"
+            app:layout_constraintVertical_bias="0.578" />
+
+        <Button
+            android:id="@+id/testNfc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="11dp"
+            android:text="Test nfc"
+            app:layout_constraintBottom_toTopOf="@+id/btnRegister"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.797"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnMaps"
+            app:layout_constraintVertical_bias="0.578" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
