Added take photo (working) (navigation works) (but still not right direction)

--- a/app/src/main/res/navigation/nav_manager.xml
+++ b/app/src/main/res/navigation/nav_manager.xml
@@ -15,6 +15,10 @@
             app:argType="string"
             app:nullable="true"
             android:defaultValue="null" />
+        <argument
+            android:name="qrCodeInfo"
+            app:argType="string"
+            app:nullable="true" />
         <action
             android:id="@+id/action_qrCodeReadFragment_to_cameraFragment"
             app:destination="@id/cameraFragment" />
