--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="cinzinha_claro">#C6C6C6</color>
     <color name="light_blue">#639FD5</color>
     <color name="red">#FB344F</color>
+    <color name="dark_blue">#00008B</color>
 </resources>
