--- a/app/src/main/res/layout/dialog_location.xml
+++ b/app/src/main/res/layout/dialog_location.xml
@@ -4,7 +4,6 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="20dp"
-    app:cardBackgroundColor="@color/white"
     android:layout_marginHorizontal="20dp"
     android:layout_gravity="center">
 
@@ -18,6 +17,7 @@
     <TextView
         android:id="@+id/realizar"
         android:layout_gravity="center"
+        android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -29,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/selectione_uma_op_o_de_tempo"
-        android:textSize="20sp"/>
+        android:textSize="15sp"/>
 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -127,8 +127,9 @@
 
     <LinearLayout
         android:gravity="center"
+        android:layout_gravity="center"
         android:layout_marginTop="20dp"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <Button
             android:id="@+id/btnConfirm"
