--- a/app/src/main/res/navigation/nav_manager.xml
+++ b/app/src/main/res/navigation/nav_manager.xml
@@ -18,7 +18,8 @@
         <argument
             android:name="qrCodeInfo"
             app:argType="string"
-            app:nullable="true" />
+            app:nullable="true"
+            android:defaultValue="null" />
         <action
             android:id="@+id/action_qrCodeReadFragment_to_cameraFragment"
             app:destination="@id/cameraFragment" />
