--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,6 +8,10 @@
 
     <style name="MyFullScreenTheme" parent="Base.Theme.PI3ES2024T24">
         <item name="android:windowFullscreen">true</item>
+        <item name="colorPrimary">@color/light_blue</item>
+        <item name="colorPrimaryDark">@color/dark_blue</item>
+        <item name="colorAccent">@color/dark_blue</item>
+
     </style>
 
 
